# servant-example

./: .gitignore  .stylish-haskell.yaml  LICENSE  Main.hs  Makefile  README.md  Setup.hs  brittany.yaml  config.json  servant-example.cabal  stack.yaml
src/: API.hs  Auth.hs  Database.hs  Server.hs
src/Data/: Config.hs  Nat.hs  Post.hs  User.hs
src/Data/String/: Multiline.hs
src/Middleware/: Debugging.hs
src/Servant/: Extras.hs
src/Text/: Lorem.hs
swagger/redoc/: index.html  package.json
swagger/vanilla/: index.html  index.js  package.json
test/: Spec.hs
